# cogent-house-web

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cogent.conf  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-publish.yml  python-app.yml
cogent/: __init__.py  alembic.ini  app.py  config.py  daily_email.py
cogent/alembic/: env.py
cogent/base/: BaseIF.py  BaseLogger.py  BaseTest.py  ContikiLogger.py  TestBif.py  db_access.py  db_access_location.py  logfromflat.py  packstate.py  rrdstore.py
cogent/node/: __init__.py
cogent/plogg/: ploggDatagather.py  scan.py
cogent/report/: __init__.py  automated_report.py  ccyield.py  fridgeopen.py  lastreport.py  lowbat.py  packetyield.py  pantryhumid.py  serverdown.py  util.py
cogent/scripts/: base-daemon.py  initializedb.py
cogent/sip/: calc_yield.py  sipsim.py
cogent/templates/: base.html  current_values.html  electricity_usage.html  index.html  node_graph.html  tree.html
cogent/views/: main.py
dataclense/: processAR.py  processCC.py  uploadAr.py  uploadCC.py
dataclense/models/: __init__.py  deployment.py  deploymentmetadata.py  event.py  host.py  (+20 more)
flaskapp/: __init__.py  app.py
tests/: __init__.py  base.py  testDeployment.py  testDiffDict.py  testLocation.py  testNode.py  testReading.py  testReport.py  testSchema.py  testSensorType.py  test_Deployment.py  test_House.py  test_Location.py  test_Node.py  test_Reading.py  test_Report.py  test_Room.py  test_Roomtype.py  test_Schema.py  test_SensorType.py  test_baseif.py  test_baselogger.py  test_cogent_base_packstate.py  test_cubic.py  test_current_values.py  test_electricity_usage.py  test_fridgeopen.py  test_graph.py  test_legacy_graph.py  test_logfromflat.py  test_lowbat.py  test_pantry_humid_report.py  test_quartic.py  test_serverdown_report.py  test_sip_phenom.py  test_sip_spline.py  test_sip_yield.py
www/: index.py
(+89 files in other folders)
