[project]
name = "ch-web"
version = "1.2"
dependencies = [
    "Flask",
    "SQLAlchemy",
    "mysqlclient",
    "configobj",
    "python-dateutil>=1.5",
    "numpy",
    "matplotlib",
    "pyserial",
    "requests",
    "transaction",
    "alembic",
    "gviz_api",
    "graphviz",
    "gunicorn",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "black",
    "isort",
    "pytest",
    "pre-commit",
    "mypy",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]  # enable isort-style import sorting
lint.ignore = ["E203", "E501"]  # black-compatible

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true

