[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cogent-house-web"
version = "1.2"
requires-python = ">=3.11,<4.0"
authors = [
  { name = "James Brusey", email = "james.brusey@gmail.com" },
  { name = "Ross Wilkins" },
  { name = "Dan Goldsmith" },
]
dependencies = [
    "Flask",
    "SQLAlchemy",
    "mysqlclient",
    "configobj",
    "python-dateutil>=1.5",
    "numpy",
    "matplotlib",
    "pyserial",
    "requests",
    "transaction",
    "alembic",
    "gviz_api",
    "graphviz",
    "gunicorn",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cogent*"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "black",
    "isort",
    "pytest",
    "pre-commit",
    "mypy",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]  # enable isort-style import sorting
lint.ignore = ["E203", "E501"]  # black-compatible

[tool.isort]
profile = "black"

[tool.mypy]

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true

